# trading-bot-manager

./: .gitignore  .prettierrc  Cargo.toml  README.md  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: main.yaml
prisma/: schema.prisma
prisma/prisma_cli/: Cargo.toml
src/: App.tsx  ToursProvider.tsx  WelcomeTour.tsx  WelcomeTourContext.tsx  WelcomeTourSteps.ts  main.tsx  rspc_bindings.ts  updates.json
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: commands.rs  errors.rs  main.rs
src-tauri/src/rspc_routes/: compte.rs  dbroutes.rs  mod.rs  optimisation.rs  optimisation_periode.rs  robot.rs  tag.rs  zip.rs
src-tauri/src/service/: migrator.rs  mod.rs
src/assets/css/: app.css  shadcdn.css
src/components/ui/: command.tsx  custom-link.tsx  input.tsx  typos.tsx
src/components/ui/compte/: home-sidebar.tsx
src/components/ui/custom/: help.tsx  number-formatted.tsx  percent-formatted.tsx  price-formatted.tsx  robot-settings.ts.tsx
src/components/ui/custom/comptes/: demo-datatable.tsx  prop-datatable.tsx  reel-datatable.tsx
src/components/ui/custom/optimisations/: optimisations-datatable.tsx
src/components/ui/custom/robots/: robots-datatable.tsx
src/components/ui/datatable/: before.tsx  pagination.tsx
src/components/ui/footer/: copyright.tsx  footer.tsx  versions.tsx
src/components/ui/header/: discret-toggle.tsx  header.tsx  menu.tsx  settings.tsx  theme-toggle.tsx  title-logo.tsx
src/components/ui/popup/: compte-add.tsx  compte-edit.tsx  optimisation-add.tsx  optimisation-edit.tsx  portfolio-add.tsx  profil-creation.tsx  robot-add.tsx  robot-edit.tsx  settings.tsx  whats-new.tsx
src/components/ui/robot/: sidebar.tsx
src/helpers/: calculs.ts  chrFiles.ts  courtiers.ts  misc.ts  periode.ts  rspc.ts  setFiles.ts
src/hooks/: useAppContext.ts  useInterval.ts  useSignal.ts
src/lib/: utils.ts
src/lib/tours/: comptesTour.tsx  dashboardTour.tsx  optimisationViewTour.tsx  optimisationsTour.tsx  robotsTour.tsx  rootTour.tsx
src/pages/: layout-sizes.ts  layout.tsx
src/pages/comptes/: content.tsx
src/pages/comptes/content/: main.tsx
src/pages/comptes/content/comptes/: demo.tsx  prop.tsx  reel.tsx
src/pages/comptes/content/details/: details.tsx
src/pages/home/: content.tsx  home.tsx  sidebar.tsx
src/pages/home/content/: details.tsx  main.tsx  root.tsx
src/pages/optimisations/: content.tsx
src/pages/optimisations/content/: main.tsx
src/pages/optimisations/content/details/: details.tsx  tab-lancement.tsx  tab-optimisation.tsx  tab-settings.tsx
src/pages/outils/: content.tsx  outils.tsx  sidebar.tsx
src/pages/outils/content/: main.tsx
src/pages/robots/: content.tsx  robots.tsx  sidebar.tsx
src/pages/robots/content/: details.tsx  main.tsx
src/queries/: queries.ts
src/routes/: routes.tsx
src/signals/components/ui/: discret.ts  popups.ts
src/stores/: global-store.ts
src/tours/: ComptesTour.tsx  DashboardTour.tsx  OptimisationViewTour.tsx  OptimisationsTour.tsx  RobotsTour.tsx  RootTour.tsx
src/types/: myfxbook.ts  robot-parameter.ts  tours.ts
